--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -306,14 +306,16 @@ place-items: center;
   cursor: pointer;
 }
 
+
+/* Show menu */
 .show-menu{
   top: 0;
 }
-/* Show menu */
-
 
 /* Add shadow header */
-
+.shadow-header{
+  box-shadow: 0 1px 16px hsla(0, 0%, 0%, .12);
+}
 
 /* Active link */
 
