--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -68,6 +68,7 @@ body {
   font-size: var(--normal-font-size);
   background-color: var(--body-color);
   color: var(--text-color);
+  transition: background-color .4s;
 }
 
 h1, h2, h3, h4 {
@@ -90,16 +91,81 @@ img {
 }
 
 /*=============== THEME ===============*/
+.nav__buttons{
+  display: flex;
+  align-items: center;
+  column-gap: 1rem;
+}
 
+.change-theme{
+  font-size: 1.25rem;
+  color: var(--title-color);
+  cursor: pointer;
+  transition: color .3s;
+}
 
 /*========== Variables Dark theme ==========*/
-
+body.dark-theme{
+  --first-color: hsl(14, 80%, 50%);
+  --black-color: hsl(0, 0%, 18%);
+  --black-color-light: hsl(0, 0%, 30%);
+  --title-color: hsl(0, 0%, 95%);
+  --text-color: hsl(0, 0%, 70%);
+  --body-color: hsl(0, 0%, 8%);
+  --container-color: hsl(0, 0%, 12%);
+}
 
 /*========== 
 	Color changes in some parts of 
 	the website, in dark theme
 ==========*/
+.dark-theme .shadow-header{
+  box-shadow: 0 1px 12px hsla(0, 0%, 0%, .6s);
+}
 
+.dark-theme .section__title-1::after,
+.dark-theme .section__title-2::after{
+  background-color: hsla(14, 70%, 50%, .2);
+}
+
+.dark-theme :is(.home__arrow, .home__line, .about__line){
+  filter: none;
+}
+
+.dark-theme .home__description b{
+  background: linear-gradient(90deg,
+              hsla(14, 80%, 50%, .3)
+              hsla(14, 80%, 50%, 0)
+              );
+}
+
+.dark-theme :is(.button__ghost, .services__icon i){
+  color: var(--white-color);
+}
+
+.dark-theme .projects__card:hover{
+  background-color: var(--body-color);
+}
+
+.dark-theme :is(.contact__mail, .contact__input, .contact__label){
+  background-color: var(--container-color);
+}
+
+.dark-theme .footer{
+  background-color: hsl(0, 0%, 4%);
+}
+
+.dark-theme::-webkit-scrollbar{
+  background-color: hsl(0, 0%, 20%);
+}
+
+.dark-theme::-webkit-scrollbar-thumb{
+  background-color: hsl(0, 0%, 30%);
+}
+
+.dark-theme::-webkit-scrollbar-thumb:hover{
+  background-color: hsl(0, 0%, 40%);
+}
 
 /*=============== REUSABLE CSS CLASSES ===============*/
 .container {
@@ -176,7 +242,7 @@ img {
   left: 0;
   background-color: var(--body-color);
   z-index: var(--z-fixed);
-  transition: box-shadow .4s;
+  transition: box-shadow .4s, background-color .4s;
 }
 
 .nav{
@@ -222,6 +288,7 @@ place-items: center;
     left: 0;
     background-color: hsla(0, 0%, 0%, .75);
     width: 100%;
+    height: 100%;
     padding-block: 1.8rem 5rem;
     text-align: center;
     backdrop-filter: blur(8px);
@@ -244,6 +311,7 @@ place-items: center;
 
 .nav__name{
   position: relative;
+  display: flex;
   width: max-content;
   margin: 0 auto 3rem;
   font-size: var(--h2-font-size);
@@ -268,6 +336,8 @@ place-items: center;
 .nav__list{
   display: flex;
   flex-direction: column;
+  justify-content: center;
+  height: 60%;
   row-gap: 2.5rem;
 }
 
@@ -295,7 +365,7 @@ place-items: center;
 }
 
 .nav__link:hover::after{
-  width: 25%;
+  width: 100%;
 }
 
 .nav__close{
@@ -318,7 +388,13 @@ place-items: center;
 }
 
 /* Active link */
+.active-link{
+  color: var(--white-color);
+}
 
+.active-link::after{
+  width: 25%;
+}
 
 /*=============== HOME ===============*/
 .home__container{
@@ -529,7 +605,7 @@ place-items: center;
 
 .about__img{
   position: relative;
-  border: 4px solid var(--white-color);
+  border: 4px solid var(--black-color-light);
   z-index: 1;
 }
 
